# ledger-app-everscale

./: .clang-format  .gitignore  Makefile  README.md  docker-compose.yml  gdb.sh
.github/workflows/: build-workflow.yml  ci-workflow.yml  ci.yml  codeql_checks.yml  coding_style_checks.yml  misspellings_checks.yml  python_client_checks.yml
client/: Cargo.toml
client/src/: main.rs
client/tests/: get_address.rs  get_pubkey.rs  sign_message.rs  sign_transaction.rs
client/tests/utils/: mod.rs
doc/: api.md
fuzz/: CMakeLists.txt  Dockerfile  build.sh  fuzzer.c  os_mocks.c  ux.h
fuzzing/: CMakeLists.txt  Dockerfile  README.md  fuzzer.c
fuzzing/extra/: TxParser.cmake
makefile_conf/chain/: everscale.mk  venom.mk
old-tests/: Cargo.toml
old-tests/speculos/: test_sign_message.py  test_sign_tx.py
old-tests/speculos/ledger_client/: transaction.py  utils.py
old-tests/src/: main.rs
src/: apdu_constants.h  byte_stream.c  byte_stream.h  cell.c  cell.h  contract.c  contract.h  errors.h  example.c  get_address.c  get_app_configuration.c  get_public_key.c  globals.c  globals.h  hashmap_label.c  main.c  menu.c  menu.h  message.c  message.h  response_setter.c  response_setter.h  sign.c  sign_transaction.c  slice_data.c  slice_data.h  text  utils.c  utils.h
src/apdu/: dispatcher.c  dispatcher.h
src/handler/: get_address.c  get_address.h  get_app_configuration.c  get_app_configuration.h  get_public_key.c  get_public_key.h  sign.c  sign.h  sign_transaction.c  sign_transaction.h
src/helper/: send_response.c  send_response.h
src/ui/: display.h  display_bagl.c  display_nbgl.c  icon_nbgl.h  menu.h  menu_bagl.c  menu_nbgl.c
src/ui/action/: validate.c  validate.h
tests/: Cargo.toml  conftest.py  setup.cfg  test_address_cmd.py  test_app_config_cmd.py  test_pubkey_cmd.py  test_sign_cmd.py  test_sign_message_cmd.py  utils.py
tests/application_client/: everscale_command_sender.py  everscale_response_unpacker.py  everscale_transaction.py
tests/speculos/: conftest.py  requirements.txt  test_address.py  test_configuration.py  test_pubkey.py  test_sign_message.py  test_sign_tx.py
tests/speculos/ledger_client/: ledger_cmd.py  ledger_cmd_builder.py  utils.py
tests/src/: main.rs
