[package]
name = "ledger-app-everscale-tests"
version = "0.1.0"
edition = "2021"
description = "Ledger-app integration tests using Everscale tools"
authors = ["Broxus team"]

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bigdecimal = "0.3.0"
clap = { version = "4.0.18", features = ["derive"] }
hex = "0.4.3"
rust_decimal = "1"
tokio = { version = "1.21.2", features = ["sync", "rt-multi-thread", "macros"] }
url = { version = "2.3.1" }

# Basic types
ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }

# JRPC client
everscale-jrpc-client = { git = "https://github.com/broxus/everscale-jrpc.git" }

# Ledger wallet
everscale-ledger-wallet = { git = "https://github.com/broxus/everscale-ledger-wallet.git" }

# Nekoton SDK
nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
nekoton-contracts = { git = "https://github.com/broxus/nekoton.git" }
